@@ -39,15 +39,16 @@ import consulo.util.lang.ObjectUtil;
 import consulo.util.lang.Pair;
 import consulo.util.lang.StringUtil;
 import consulo.util.lang.TimeoutUtil;
-import org.jspecify.annotations.Nullable;
 import org.apache.commons.codec.binary.Hex;
 import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
 import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
 import org.apache.commons.compress.compressors.gzip.GzipCompressorInputStream;
+import org.jspecify.annotations.Nullable;
 
 import java.io.*;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.nio.file.attribute.FileTime;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Locale;
@@ -143,8 +144,10 @@ public class PluginDownloader {
                     throw e;
                 }
                 catch (Throwable e) {
+                    LOG.warn("Failed to download plugin " + myPluginId, e);
+
                     myFile = null;
-                    errorMessage = LocalizeValue.ofNullable(e.getLocalizedMessage());
+                    errorMessage = LocalizeValue.of(e);
 
                     TimeoutUtil.sleep(5000L);
                 }
@@ -158,8 +161,10 @@ public class PluginDownloader {
                 throw e;
             }
             catch (Throwable e) {
+                LOG.warn("Failed to download plugin " + myPluginId, e);
+
                 myFile = null;
-                errorMessage = LocalizeValue.ofNullable(e.getLocalizedMessage());
+                errorMessage = LocalizeValue.of(e);
             }
         }
 
@@ -187,40 +192,52 @@ public class PluginDownloader {
 
             String prefix = Platform.current().os().isMac() ? "Consulo.app/Contents/platform/" : "Consulo/platform/";
 
-            File platformDirectory = ContainerPathManager.get().getExternalPlatformDirectory();
+            Path platformDirectory = ContainerPathManager.get().getExternalPlatformDirectory().toPath().normalize();
 
             try (TarArchiveInputStream ais = new TarArchiveInputStream(new GzipCompressorInputStream(new FileInputStream(myFile)))) {
                 TarArchiveEntry tempEntry;
                 while ((tempEntry = ais.getNextEntry()) != null) {
                     String name = tempEntry.getName();
-                    // we interest only in new build
-                    if (name.startsWith(prefix) && name.length() != prefix.length()) {
-                        File targetFile = new File(platformDirectory, name.substring(prefix.length(), name.length()));
+                    if (!name.startsWith(prefix) || name.length() == prefix.length()) {
+                        // we're interested only in the new build
+                        continue;
+                    }
+                    Path targetFile = platformDirectory.resolve(name.substring(prefix.length())).normalize();
+                    if (!targetFile.startsWith(platformDirectory)) {
+                        throw new IOException("TAR entry escapes the platform directory: " + name);
+                    }
 
-                        if (tempEntry.isDirectory()) {
-                            FileUtil.createDirectory(targetFile);
+                    if (tempEntry.isDirectory()) {
+                        Files.createDirectories(targetFile);
+                    }
+                    else if (tempEntry.isSymbolicLink()) {
+                        Path linkTarget = targetFile.resolveSibling(tempEntry.getLinkName()).normalize();
+                        if (!linkTarget.startsWith(platformDirectory)) {
+                            throw new IOException("TAR symlink escapes the platform directory: " + name);
                         }
-                        else if (tempEntry.isSymbolicLink()) {
-                            FileUtil.createParentDirs(targetFile);
 
-                            Files.createSymbolicLink(targetFile.toPath(), Paths.get(tempEntry.getLinkName()));
+                        Files.createDirectories(targetFile.getParent());
+                        Files.createSymbolicLink(targetFile, Path.of(tempEntry.getLinkName()));
+                    }
+                    else {
+                        Files.createDirectories(targetFile.getParent());
+                        try (OutputStream stream = Files.newOutputStream(targetFile)) {
+                            StreamUtil.copyStreamContent(ais, stream);
                         }
-                        else {
-                            FileUtil.createParentDirs(targetFile);
 
-                            try (OutputStream stream = new FileOutputStream(targetFile)) {
-                                StreamUtil.copyStreamContent(ais, stream);
-                            }
+                        try {
+                            Files.setLastModifiedTime(targetFile, FileTime.fromMillis(tempEntry.getLastModifiedDate().getTime()));
+                        }
+                        catch (IOException e) {
+                            LOG.warn("Failed to set last modified time of " + targetFile, e);
+                        }
 
-                            targetFile.setLastModified(tempEntry.getLastModifiedDate().getTime());
-
-                            // it's a fix for TarArchiveEntry.DEFAULT_FILE_MODE
-                            if (tempEntry.getMode() == 0b111_101_101) {
-                                NioPathUtil.setPosixFilePermissions(
-                                    targetFile.toPath(),
-                                    NioPathUtil.convertModeToFilePermissions(tempEntry.getMode())
-                                );
-                            }
+                        // it's a fix for TarArchiveEntry.DEFAULT_FILE_MODE
+                        if (tempEntry.getMode() == 0b111_101_101) {
+                            NioPathUtil.setPosixFilePermissions(
+                                targetFile,
+                                NioPathUtil.convertModeToFilePermissions(tempEntry.getMode())
+                            );
                         }
                     }
                 }
@@ -228,9 +245,9 @@ public class PluginDownloader {
 
             // at start - delete old version, after restart. On mac - we can't delete boot build
             String buildNumber = ApplicationInfo.getInstance().getBuild().asString();
-            File oldBuild = new File(platformDirectory, "build" + buildNumber);
-            if (oldBuild.exists()) {
-                StartupActionScriptManager.addActionCommand(new StartupActionScriptManager.DeleteCommand(oldBuild));
+            Path oldBuild = platformDirectory.resolve("build" + buildNumber);
+            if (Files.exists(oldBuild)) {
+                StartupActionScriptManager.addActionCommand(new StartupActionScriptManager.DeleteCommand(oldBuild.toFile()));
             }
 
             FileUtil.delete(myFile);
